--- a/system_recon/Cargo.toml
+++ b/system_recon/Cargo.toml
@@ -11,3 +11,5 @@ serde = {version = "1.0.137", features = ["derive"]}
 serde_json = "1.0"
 sysinfo = "0.23.12"
 clap = { version = "3.1.18", features = ["derive"] }
+winapi = { version = "0.3.9", features = ["iphlpapi"] }
+execute = "0.2.11"
