--- a/system_recon/Cargo.toml
+++ b/system_recon/Cargo.toml
@@ -13,3 +13,5 @@ sysinfo = "0.23.12"
 clap = { version = "3.1.18", features = ["derive"] }
 winapi = { version = "0.3.9", features = ["iphlpapi"] }
 execute = "0.2.11"
+create_process_w = { version = "0.1.2", package = "CreateProcessW" }
+serde-xml-rs = "0.6.0"
